# proj_template

./: .gitignore  .pre-commit-config.yaml  README.md  Setup.md  pyproject.toml
notebooks/: test.py
proj/: __init__.py
